[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resolution-week5-xrime"
version = "1.0"
description = "Food Spots API with Auth and Rate Limiting"
dependencies = [
    "fastapi[standard]",
    "slowapi"
]

[project.scripts]
# This tells Python: find 'main.py' inside the 'src' folder and run 'main()'
my-api = "resolution_week5_xrime.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/resolution_week5_xrime"]